--- a/src/ienroll-homepage.html
+++ b/src/ienroll-homepage.html
@@ -94,8 +94,8 @@
                 Fast, secure, and hassle-free enrollment for every student
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center slide-up">
-                <a href="enrollment-system.html" class="bg-white text-sky-blue px-8 py-4 rounded-lg text-lg font-semibold hover:bg-gray-100 transition-all duration-300 hover-scale shadow-lg">
-                    Enroll Now!
+                <a href="enrollment-system.html" class="bg-sky-blue text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-blue-600 transition-all duration-300 hover-scale shadow-md">
+                    Enroll Now
                 </a>
               
             </div>
