--- a/src/ienroll-homepage.html
+++ b/src/ienroll-homepage.html
@@ -299,7 +299,7 @@
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 bg-sky-blue rounded-full flex items-center justify-center text-white font-bold text-lg">S</div>
                         <div class="ml-4">
-                            <h4 class="font-semibold text-gray-900">Sarah Johnson</h4>
+                            <h4 class="font-semibold text-gray-900">Juan Dela Cruz</h4>
                             <p class="text-gray-600">Student</p>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 bg-teal rounded-full flex items-center justify-center text-white font-bold text-lg">M</div>
                         <div class="ml-4">
-                            <h4 class="font-semibold text-gray-900">Michael Chen</h4>
+                            <h4 class="font-semibold text-gray-900">Andres Bonifacio</h4>
                             <p class="text-gray-600">Administrator</p>
                         </div>
                     </div>
