--- a/src/ienroll-homepage.html
+++ b/src/ienroll-homepage.html
@@ -24,8 +24,8 @@
     </script>
     <style>
         body { font-family: 'Outfit', sans-serif; }
-        .gradient-bg { background: linear-gradient(135deg, #00BFFF 0%, #0D9488 100%); }
-        .hero-gradient { background: linear-gradient(135deg, #00BFFF 0%, #0284C7 50%, #0D9488 100%); }
+        .gradient-bg { background: linear-gradient(135deg, #00BFFF 0%, 100%); }
+        .hero-gradient { background: linear-gradient(135deg, #00BFFF 0%, #0284C7 50%); }
         .fade-in { animation: fadeIn 0.8s ease-in-out; }
         .slide-up { animation: slideUp 0.8s ease-in-out; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -93,12 +93,14 @@
             <p class="text-xl sm:text-2xl mb-8 text-blue-100 slide-up">
                 Fast, secure, and hassle-free enrollment for every student
             </p>
-            <div class="flex flex-col sm:flex-row gap-4 justify-center items-center slide-up">
-                <a href="enrollment-system.html" class="bg-sky-blue text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-blue-600 transition-all duration-300 hover-scale shadow-md">
-                    Enroll Now
+            <div class="flex flex-col sm:flex-row gap-6 justify-center items-center slide-up mt-20">
+                <a href="enrollment-system.html" class="w-56 bg-sky-blue text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-blue-600 transition-all duration-300 hover-scale shadow-md">
+                    Register
                 </a>
-              
+                <a href="student-login.html" class="w-56 bg-white text-sky-blue px-8 py-4 rounded-lg text-lg font-semibold hover:bg-gray-100 transition-all duration-300 hover-scale shadow-md">
+                    Login</a>
             </div>
+        </div>
         </div>
         
         <!-- Decorative elements -->
