--- a/src/admin-login.html
+++ b/src/admin-login.html
@@ -10,10 +10,17 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
             rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap"
+            rel="stylesheet">
+
         <script>
         tailwind.config = {
             theme: {
                 extend: {
+                      fontFamily: {
+                        'outfit': ['Outfit', 'sans-serif'],
+                    },
                     colors: {
                         primary: '#00BFFF',
                         'primary-dark': '#0099CC',
@@ -111,7 +118,7 @@
     </style>
     </head>
     <body
-        class="bg-gradient-to-br from-blue-50 via-white to-cyan-50 min-h-screen flex items-center justify-center p-4">
+        class="bg-gradient-to-br from-blue-50 via-white to-cyan-50 min-h-screen flex items-center justify-center p-4 font-outfit">
         <!-- Background Pattern -->
         <div class="absolute inset-0 overflow-hidden pointer-events-none">
             <div
@@ -124,15 +131,6 @@
         <div class="relative w-full max-w-md">
             <!-- Logo and Title -->
             <div class="text-center mb-8 ">
-                <div
-                    class="w-16 h-16 bg-primary rounded-2xl flex items-center justify-center mx-auto mb-4 shadow-lg">
-                    <svg class="w-10 h-10 text-white" fill="none"
-                        stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
-                    </svg>
-                </div>
                 <h1 class="text-3xl font-bold text-gray-900 mb-2">iEnroll
                     Admin</h1>
                 <p class="text-gray-600">Sign in to your admin account</p>
