--- a/src/ienroll-homepage.html
+++ b/src/ienroll-homepage.html
@@ -25,7 +25,7 @@
     <style>
         body { font-family: 'Outfit', sans-serif; }
         .gradient-bg { background: linear-gradient(135deg, #00BFFF 0%, 100%); }
-        .hero-gradient { background: linear-gradient(135deg, #00BFFF 0%, #0284C7 50%); }
+        .hero-gradient { background: linear-gradient(135deg, #00BFFF 0%, #0284C7 10%); }
         .fade-in { animation: fadeIn 0.8s ease-in-out; }
         .slide-up { animation: slideUp 0.8s ease-in-out; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -83,7 +83,7 @@
         <div class="absolute inset-0">
             <img src="https://images.pexels.com/photos/5905709/pexels-photo-5905709.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" 
                  alt="Students studying and collaborating" 
-                 class="w-full h-full object-cover opacity-20"
+                 class="w-full h-full object-cover opacity-50"
                  onerror="this.style.display='none'">
         </div>
         <div class="relative text-center px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto">
@@ -296,7 +296,7 @@
                 </p>
             </div>
             
-            <div class="grid md:grid-cols-2 gap-8">
+            <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-white p-8 rounded-xl shadow-lg">
                     <div class="flex items-center mb-6">
                         <div class="w-12 h-12 bg-sky-blue rounded-full flex items-center justify-center text-white font-bold text-lg">S</div>
@@ -317,6 +317,17 @@
                         </div>
                     </div>
                     <p class="text-gray-700 italic">"As an administrator, iEnroll has revolutionized how we handle student enrollments. The efficiency gains are remarkable, and students love the user experience."</p>
+                </div>
+                
+                <div class="bg-white p-8 rounded-xl shadow-lg">
+                    <div class="flex items-center mb-6">
+                        <div class="w-12 h-12 bg-orange rounded-full flex items-center justify-center text-white font-bold text-lg">J</div>
+                        <div class="ml-4">
+                            <h4 class="font-semibold text-gray-900">John Doe</h4>
+                            <p class="text-gray-600">Student</p>
+                        </div>
+                    </div>
+                    <p class="text-gray-700 italic">"The iEnroll platform is user-friendly and efficient. I was able to complete my enrollment in no time!"</p>
                 </div>
             </div>
         </div>
@@ -435,9 +446,9 @@
                                 <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
                             </svg>
                         </a>
-                        <a href="#" class="text-gray-400 hover:text-white transition-colors">
+                        <a href="#" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
                             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"/>
+                                <path d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"/>
                             </svg>
                         </a>
                         <a href="#" class="text-gray-400 hover:text-white transition-colors">
